<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SerefakyuzFragments</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="fragment1">Fragment 1</string>
    <string name="fragment2">Fragment 2</string>
    <string name="first_name">Ad: </string>
    <string name="second_name">Soyad: </string>
    <string name="age">Yaş: </string>
    <string name="Location">Şehir: </string>
    <string name="signin">Kaydol</string>
    <string name ="fields_should_be_filled">"Lütfen tüm alanları doldurunuz!"</string>

</resources>
